@@ -31,6 +31,8 @@ Version 1.8.1
        menu for SVNParentPath item. (Stefan)
 - BUG: Issue #505: Crash in log dialog
        editing message. (Stefan)
+- BUG: Issue #504: Log message editor always
+       use antialiased fonts. (Stefan)
 
 Version 1.8.0
 See the release notes here:
